# oma24-proj

./: README.md  pyproject.toml
config/: EuroSAT.yaml  Unet_temp.yaml  lwf_template.yaml  submit_template.sh
config/FarSeg/: lwf_FarSeg_baseline.yaml
hpc_sh/: submit_FarSeg.sh  submit_template.sh
src/oma24/: __init__.py
src/oma24-proj/: __init__.py
src/oma24-proj/training/: lwf_unet_aspp_trainer.py  lwf_unet_trainer.py  submit_lwf.py
src/oma24/training/: __init__.py  lwf_farseg_trainer.py  lwf_unet_loss_trainer.py  lwf_unet_skeleton_trainer.py  lwf_unet_trainer.py  submit_lwf.py  train_lwf.py
